// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/rhsChannelBoardItem render board 1`] = `
<div>
  <div
    class="RHSChannelBoardItem"
  >
    <div
      class="board-info"
    >
      
      <span
        class="title"
      >
        Test board
      </span>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="description"
    >
      <div
        class="MarkdownEditor octo-editor  "
      >
        <div
          class="octo-editor-preview octo-placeholder"
          data-testid="preview-element"
        />
      </div>
    </div>
    <div
      class="date"
    >
      Last update at: July 08, 8:10 PM
    </div>
  </div>
</div>
`;

exports[`components/rhsChannelBoardItem render board with menu open 1`] = `
<div>
  <div
    class="RHSChannelBoardItem"
  >
    <div
      class="board-info"
    >
      
      <span
        class="title"
      >
        Test board
      </span>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        <div
          class="Menu noselect left "
        >
          <div
            class="menu-contents"
          >
            <div
              class="menu-options"
            >
              <div>
                <div
                  aria-label="Unlink board"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Unlink board
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div />
            </div>
            <div
              class="menu-spacer hideOnWidescreen"
            />
            <div
              class="menu-options hideOnWidescreen"
            >
              <div
                aria-label="Cancel"
                class="MenuOption TextOption menu-option menu-cancel"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Cancel
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="description"
    >
      <div
        class="MarkdownEditor octo-editor  "
      >
        <div
          class="octo-editor-preview"
          data-testid="preview-element"
        >
          <p>
            New board
          </p>
        </div>
        <div
          class="MarkdownEditorInput MarkdownEditorInput--IsNotEditing"
        >
          <div
            class="DraftEditor-root"
          >
            <div
              class="DraftEditor-editorContainer"
            >
              <div
                aria-autocomplete="list"
                aria-expanded="false"
                class="notranslate public-DraftEditor-content"
                contenteditable="true"
                role="combobox"
                spellcheck="false"
                style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
              >
                <div
                  data-contents="true"
                >
                  <div
                    class=""
                    data-block="true"
                    data-editor="2a8q6"
                    data-offset-key="4dadh-0-0"
                  >
                    <div
                      class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                      data-offset-key="4dadh-0-0"
                    >
                      <span
                        data-offset-key="4dadh-0-0"
                      >
                        <span
                          data-text="true"
                        >
                          New board
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="date"
    >
      Last update at: July 08, 8:10 PM
    </div>
  </div>
</div>
`;
